--- a/app/design/frontend/default/homezone/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/view.phtml
@@ -84,15 +84,17 @@
                     <div class="std"><?php echo $_helper->productAttribute($_product, nl2br($_product->getShortDescription()), 'short_description') ?></div>
                 </div>
             <?php endif;?>
-
+			<?php if(!$this->hasOptions()): ?>
+				<?php echo $this->getPriceHtml($_product, true) ?>
+			<?php endif; ?>
             <?php echo $this->getChildHtml('other');?>
-
-            <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
-            <?php endif;?>
 			<?php if ($_product->isSaleable() && $this->hasOptions()):?>
             <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
 			<?php endif;?>
+            <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
+            <?php endif;?>
+			
         </div>
 
         <div class="product-img-box">
