--- a/app/design/frontend/default/homezone/template/catalog/product/view/type/default.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/view/type/default.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php /* @var $this Mage_Catalog_Block_Product_View_Abstract */?>
-<?php $_product = $this->getProduct() ?>
+<?php $_product = $this->getProduct();?>
 
 <?php if ($this->displayProductStockStatus()): ?>
     <?php if ($_product->isAvailable()): ?>
@@ -35,4 +35,3 @@
     <?php endif; ?>
 <?php endif; ?>
 <?php echo $this->getChildHtml('product_type_data_extra') ?>
-<?php echo $this->getPriceHtml($_product) ?>
