--- a/skin/frontend/default/homezone/css/styles.css
+++ b/skin/frontend/default/homezone/css/styles.css
@@ -384,15 +384,15 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .toolbar-bottom {}
 
 /* Data Table */
-.data-table { width:100%; border:1px solid #bebcb7; }
-.data-table .odd  { background:#f8f7f5 }
-.data-table .even { background:#eeeded; }
+.data-table { width:100%; border:1px solid #efefef }
+.data-table .odd  { }
+.data-table .even {  }
 /*.data-table tr.odd:hover,
 .data-table tr.even:hover { background:#ebf1f6; }*/
 .data-table td.last,
 .data-table th.last { border-right:0; }
 .data-table tr.last th,
-.data-table tr.last td { border-bottom:0 !important; }
+.data-table tr.last td {}
 .data-table th { padding:3px 8px; font-weight:bold; }
 .data-table td { padding:3px 8px; }
 
@@ -404,13 +404,13 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .data-table thead th .tax-flag { font-size:11px; white-space:nowrap; }
 
 .data-table tfoot { border-bottom:1px solid #d9dde3; }
-.data-table tfoot tr.first td { background:url(../images/bkg_tfoot.gif) 0 0 repeat-x; }
-.data-table tfoot tr { background-color:#dee5e8 !important; }
+.data-table tfoot tr.first td { background:url(../images/bkg_tfoot.gif) 0 0 repeat-x; padding-bottom: 10px;}
+.data-table tfoot tr { background-color:#fbfbfb !important; }
 .data-table tfoot td { padding-top:1px; padding-bottom:1px; border-bottom:0; border-right:1px solid #d9dde3; }
 .data-table tfoot strong { font-size:16px; }
 
 .data-table tbody th,
-.data-table tbody td { border-bottom:1px solid #d9dde3; border-right:1px solid #d9dde3; }
+.data-table tbody td { border-bottom:1px solid #efefef; border-right:1px solid #efefef;height: 116px; }
 /* Bundle products tables */
 .data-table tbody.odd tr { background:#f8f7f5 !important; }
 .data-table tbody.even tr { background:#f6f6f6 !important; }
@@ -1036,7 +1036,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Add to Cart */
 .add-to-cart label { float:left; margin-right:5px; font-weight:bold; color:#666; }
-.add-to-cart .qty { float:left; margin-right:5px; }
+.add-to-cart .qty { float:left; margin-right: 5px;}
 .add-to-cart button.button { float:left; }
 .add-to-cart .paypal-logo { clear:left; margin:0; text-align:right; }
 .add-to-cart .paypal-logo .paypal-or { clear:both; display:block; margin:5px 60px 5px 0; }
@@ -1134,7 +1134,7 @@ tr.summary-details-excluded { font-style:italic; }
 .product-options p.note { margin:0; font-size:11px; }
 .product-options p.required { position:absolute; right:20px; top:20px; }
 
-.product-options-bottom { background-color:#fffada; padding:15px 20px; border:1px solid #e4e4e4; border-top:0; }
+.product-options-bottom {  border-top:0; }
 .product-options-bottom .product-pricing,
 .product-options-bottom .tier-prices { margin:0; padding:0 0 10px; border:0; background:0; color:#e26703; }
 .product-options-bottom .tier-prices li { background:0; padding:2px 0; }
@@ -1145,9 +1145,13 @@ tr.summary-details-excluded { font-style:italic; }
 .col3-layout .product-options-bottom .price-box { float:none; padding:0 0 5px; }
 .product-options-bottom .price-label { float:left; padding-right:5px; }
 .product-options-bottom .price-tax { float:left; }
-.product-options-bottom .add-to-cart { float:right; }
+.product-options-bottom .add-to-cart { float:right; margin-top: 2px;}
+.product-options-bottom .add-to-cart button span{display: block;word-spacing: 1px;background: url('../images/btn-button-addtocart.jpg');padding: 5px 10px 5px 32px  !important;font: 14px "Oswald", sans-serif;text-transform: uppercase;white-space: nowrap;color: #fff;font-weight: inherit;}
+.product-options-bottom .add-to-cart button span span{background: none	}
+.product-options-bottom .add-to-cart .qty {float: left;margin-right: 20px;height: 36px;width: 65px !important;border:1px solid #EFEFEF;text-align: center;}
+.product-options-bottom .add-to-cart label{margin: 12px 9px 00;}
 .product-shop .product-options-bottom { margin:0 0 10px; }
-.product-shop .product-options-bottom .price-box { float:none; margin:0 0 5px; }
+.product-shop .product-options-bottom .price-box { float:none; margin:6px 0 5px; }
 .product-shop .product-options-bottom .price-label { float:none; padding-right:0; }
 .product-shop .product-options-bottom .price-tax { float:none; }
 .product-shop .product-options-bottom .add-to-cart-box { clear:both; float:left; padding-top:12px; }
@@ -1257,29 +1261,50 @@ tr.summary-details-excluded { font-style:italic; }
 
 
 /* Shopping Cart ========================================================================= */
-.cart .page-title { border-bottom:0; margin:0 0 12px; }
-.cart .page-title h1 { margin:10px 0 0; }
+.cart .page-title { border-bottom:0; margin:0 0 15px; }
+.cart .page-title h1 { margin:6px 0 0;  font-family: "Oswald" , sans-serif; font-size: 21px; color: #8b8b8b ;text-transform: uppercase;line-height: 1;display: inline-block;}
 
 /* Checkout Types */
+#shopping-cart-table{border-collapse:collapse}
 .cart .page-title .checkout-types li { margin:0 0 5px; }
 .cart .title-buttons .checkout-types { float:right; }
+.cart .title-buttons .checkout-types button span{background: #efefef; font-size: 13px; font-family: "Oswald" ,sans-serif; color:#8b8b8b ;  padding: 18px 20px 16px 19px !important;font-weight: inherit; height: auto !important;line-height: 0;}
+.cart .title-buttons .checkout-types button span span{background: none; padding: 0 !important;}
 .cart .title-buttons .checkout-types li { float:left; margin:0 0 5px 5px; }
 .cart .checkout-types .paypal-or { margin:0 8px; line-height:2.3; }
 .cart .totals .checkout-types .paypal-or { clear:both; display:block; padding:8px 55px 0 0; line-height:1.0; font-size:11px; }
 
 /* Shopping Cart Table */
-.cart-table th { padding:2px 10px; }
+.cart-table th { padding: 12px 10px !important;border-bottom: 1px solid #efefef !important; border-right: 1px solid #efefef !important; background: #fbfbfb !important;  font:12px bold "Arial", sans-serif; color: #8b8b8b !important;}
 .cart-table td { padding:10px; }
-.cart-table .product-name { font-weight:bold; margin:0 0 5px; color:#2f2f2f; }
+.cart-table td a{ display: block; padding: 10px; border:1px solid #efefef;margin-top: 6px;}
+.cart-table td a img{border:1px solid #efefef;}
+.cart-table td.title-product{width: 422px;}
+.cart-table td.last{width: 51px;}
+.cart-table td.last a{padding: 0; border: 0;margin: 2px auto;}
+.cart-table td.subtotal{width: 80px !important;}
+.cart-table td.table-qty{width: 51px;padding-top: 6px;}
+.cart-table td.table-qty .qty{width: 44px !important;height: 25px; text-align: center; border: 1px solid #efefef; padding: 1px 1px 1px 1px;}
+.cart-table td.table-price{width: 69px;text-align: center; padding-top: 11px; }
+.cart-table td.table-price span{color: #8b8b8b}
+.cart-table td.table-edit{width: 40px;}
+.cart-table td.table-edit a{color: #d85d60; text-decoration: underline; font-size: 12px; font-family: "Arial",sans-serif; display: inline; padding: 0; border: 0}
+.cart-table tbody tr{padding-bottom: 10px;}
+.cart-table .product-name {  margin: 0;line-height: 0; color:#2f2f2f;  display: inline-block; font-family: "Oswald" , sans-serif; font-size: 12px;  }
+.cart-table .product-name a{border: 0 ;color: #d85d60 ; text-decoration: none; padding: 0;margin-top: 12px;word-spacing: 2px;}
 .cart-table .item-msg { margin:5px 0; font-size:11px; font-weight:bold; color:#df280a; }
 .cart-table tfoot td { padding:5px 10px; }
-.cart-table .btn-continue { float:left; }
+.cart-table .btn-continue { float:left;margin-top: 5px }
 .cart-table .btn-empty span,
 .cart-table .btn-continue span,
-.cart-table .btn-update span { border-color:#406a83; background:#618499; }
+.cart-table .btn-update span { border-color:#70a972; background:#70a972; color: #ffffff; font-size: 12px; font-family: "Oswald" ,sans-serif; }
+.cart-table .btn-continue span{padding: 8px 7px 7px 7px !important;line-height: 0;}
+.cart-table .btn-update span{padding: 8px 10px 8px 8px !important;line-height: 0;word-spacing: 4px;}
+.cart-table .btn-update span span,.cart-table .btn-update span span{padding: 0; background: 0;}
+.cart-table .btn-empty{display: none}
 .cart-table .btn-update,
 .cart-table .btn-empty { float:right; }
-.cart-table .btn-update { margin-left:10px; }
+.cart-table .btn-update { margin-left:10px; margin-top: 5px}
 
 /* Shopping Cart Collateral boxes */
 .cart .cart-collaterals { padding:25px 0 0; }
@@ -2207,3 +2232,6 @@ box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.15);
 .category-products .limiter label{margin-right: 2px}
 
 .category-products .limiter select{height: 19px;}
+
+.col1-layout .col-main{padding: 0; }
+.col1-layout .col-main .cart{ margin: 30px 0 0 0; float: left; background: #fff; padding: 20px; width: 950px;}
