--- a/app/design/frontend/default/homezone/template/tax/checkout/subtotal.phtml
+++ b/app/design/frontend/default/homezone/template/tax/checkout/subtotal.phtml
@@ -47,10 +47,10 @@
 </tr>
 <?php else : ?>
 <tr>
-    <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
+    <td style="<?php echo $this->getStyle() ?>" class="a-right td-title" colspan="<?php echo $this->getColspan(); ?>">
         <?php echo $this->getTotal()->getTitle() ?>
     </td>
-    <td style="<?php echo $this->getStyle() ?>" class="a-right">
+    <td style="<?php echo $this->getStyle() ?>" class="a-right td-price">
         <?php echo $this->helper('checkout')->formatPrice($this->getTotal()->getValue()) ?>
     </td>
 </tr>
