--- a/app/design/frontend/default/homezone/layout/checkout.xml
+++ b/app/design/frontend/default/homezone/layout/checkout.xml
@@ -59,7 +59,7 @@ Default layout, loads most of the pages
         <remove name="left"/>
         <!-- Mage_Checkout -->
         <reference name="root">
-            <action method="setTemplate"><template>page/1column.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
         </reference>
         <reference name="content">
             <block type="checkout/cart" name="checkout.cart">
@@ -117,7 +117,7 @@ will be rendered on all checkout pages
         <remove name="left"/>
 
         <reference name="root">
-            <action method="setTemplate"><template>page/1column.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
         </reference>
         <reference name="content">
             <block type="checkout/multishipping_state" name="checkout_state" template="checkout/multishipping/state.phtml"/>
@@ -300,7 +300,7 @@ One page checkout main layout
     <checkout_onepage_index translate="label">
         <label>One Page Checkout</label>
         <!-- Mage_Checkout -->
-        <remove name="left"/>
+        
 
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
