--- a/app/design/frontend/default/homezone/template/checkout/cart/shipping.phtml
+++ b/app/design/frontend/default/homezone/template/checkout/cart/shipping.phtml
@@ -26,20 +26,20 @@
 ?>
 <?php /** @var $this Mage_Checkout_Block_Cart_Shipping */ ?>
 <div class="shipping">
-    <h2><?php echo $this->__('Estimate Shipping and Tax') ?></h2>
+    <h2><?php echo $this->__('Estimate Shipping & Tax') ?></h2>
     <div class="shipping-form">
        <form action="<?php echo $this->getUrl('checkout/cart/estimatePost') ?>" method="post" id="shipping-zip-form">
             <p><?php echo $this->__('Enter your destination to get a shipping estimate.') ?></p>
             <ul class="form-list">
                 <li>
-                    <label for="country" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
+                    <em>*</em><label for="country" class="required"><?php echo $this->__('Country') ?></label>
                     <div class="input-box">
                         <?php echo Mage::getBlockSingleton('directory/data')->getCountryHtmlSelect($this->getEstimateCountryId()) ?>
                     </div>
                 </li>
             <?php //if($this->getStateActive()): ?>
                 <li>
-                    <label for="region_id"<?php if ($this->isStateProvinceRequired()) echo ' class="required"' ?>><?php if ($this->isStateProvinceRequired()) echo '<em>*</em>' ?><?php echo $this->__('State/Province') ?></label>
+                    <?php if ($this->isStateProvinceRequired()) echo '<em>*</em>' ?><label for="region_id"<?php if ($this->isStateProvinceRequired()) echo ' class="required"' ?>><?php echo $this->__('State/Province') ?></label>
                     <div class="input-box">
                         <select id="region_id" name="region_id" title="<?php echo $this->__('State/Province') ?>" style="display:none;"<?php echo ($this->isStateProvinceRequired() ? ' class="validate-select"' : '') ?>>
                             <option value=""><?php echo $this->__('Please select region, state or province') ?></option>
